[build-system]
requires = ["setuptools>=80", "wheel", "Cython>=3.0", "numpy>=1.19"]
build-backend = "setuptools.build_meta"

[project]
name = "py-parsec"
version = "0.1.0"
description = "Python interface for PaRSEC (Parallel Runtime System for Extreme Scale Computing)"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Qinglei Cao", email = "qinglei3@gmail.com"}
]
maintainers = [
    {name = "Qinglei Cao", email = "qinglei3@gmail.com"}
]
keywords = ["parallel", "runtime", "HPC", "distributed", "computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "mpi4py>=3.0.0",
    "requests>=2.25.0",  # For downloading PaRSEC
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mpi>=0.6",
]

[project.urls]
Homepage = "https://github.com/ICLDisco/parsec"
Repository = "https://github.com/ICLDisco/parsec"
Documentation = "https://py-parsec.readthedocs.io"
"Bug Tracker" = "https://github.com/ICLDisco/parsec/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["py_parsec"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "mpi: marks tests that require MPI",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/py_parsec"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
